2005-01-13 17:54  ievlev

	* Makefile: added DEBUG_LDFLAGS to remove rpath during final build 

2005-01-12 18:13  ievlev

	* Makefile.common: 
	 - Auto commit 

2005-01-12 18:13  ievlev

	* include/mt/query/article.hh, include/mt/query/config.hh,
	include/mt/query/dict_path.hh, include/mt/query/file_map.hh,
	include/mt/query/lang_info.hh, include/mt/query/lemm.hh,
	include/mt/query/siktable.hh, include/mt/query/singleton.hh,
	include/mt/query/translation.hh, src/Makefile, src/article.cc,
	src/config.cc, src/dict_path.cc, src/lang_info.cc, src/lemm.cc,
	src/lgk.cc, src/translation.cc, testsuite/Makefile,
	testsuite/test1.cc, testsuite/test2.cc, testsuite/test4.cc,
	vcnet/libmtquery.sln, vcnet/test1.vcproj, vcnet/test2.vcproj,
	vcnet/test4.vcproj: now ready for gcc3.4 and win32 

2004-12-27 15:46  ievlev

	* README, include/mt/query/article.hh, include/mt/query/config.hh,
	include/mt/query/file_map.hh, include/mt/query/lang_info.hh,
	include/mt/query/lemm.hh, include/mt/query/mtquery_dll.hh,
	include/mt/query/siktable.hh, include/mt/query/translation.hh,
	src/config.cc, src/lemm.cc, src/translation.cc, testsuite/test1.cc,
	vcnet/libmtquery.sln, vcnet/libmtquery.vcproj: first port to Win32 

2004-12-15 16:55  ievlev

	* src/siktable.cc: added binary to stream (needed by ms) 

2004-11-25 16:43  ievlev

	* include/mt/query/linguas.hh, src/Makefile, src/linguas.cc: added
	linguas list 

2004-11-12 16:10  ievlev

	* include/mt/query/lgk.hh, src/lgk.cc, src/siktable.cc: added
	namespace to lgk header to avoid name conflicts 

2004-11-12 14:39  ievlev

	* include/mt/query/file_map.hh, src/file_map.cc,
	testsuite/test6.cc: rename fs_map to file_map 

2004-11-12 13:01  ievlev

	* testsuite/test6.cc: added missing test file 

2004-11-12 13:00  ievlev

	* include/mt/query/file_map.hh, src/Makefile, src/file_map.cc,
	testsuite/Makefile: added simple interface to subjects.txt like
	databases 

2004-11-11 13:22  ievlev

	* include/mt/query/translation.hh, src/translation.cc,