@@ -1,5 +1,5 @@
 NAME = mtquery
-VERSION = 0.0.1alpha2
+VERSION = 0.0.1alpha3
 
 CC = gcc
 CXX = g++
